// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CFlex should change styles 1`] = `
<DocumentFragment>
  <div
    class="css-u6v8er"
    data-chakra-component="CFlex"
    data-testid="flex"
  >
    Flex Me
  </div>
</DocumentFragment>
`;

exports[`CFlex should render correctly 1`] = `
<DocumentFragment>
  <div
    class="css-k008qs"
    data-chakra-component="CFlex"
    data-testid="flex"
  >
    Flex Me
  </div>
</DocumentFragment>
`;
